// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BrowserBar Normal 1`] = `
<div
  className="flex items-center text-sm"
>
  <h3
    className="mr-6 tracking-wider uppercase"
  >
    browse by
  </h3>
  <ul
    className="flex border border-solid border-gray-600 rounded px-1 py-px"
  >
    <li
      className="dropdown-container px-4 py-1 min-w-32 border-r border-solid border-gray-600 last:border-r-0 relative hover:text-white hover:bg-gray-400 hover:rounded-t"
    >
      <p
        className="tracking-wider inline uppercase"
      >
        genre
      </p>
      <svg
        className="inline ml-2 fill-current"
      >
        arrow-down.svg
      </svg>
      <ul
        className="hidden absolute -ml-4 mt-1 px-3 w-full bg-gray-400 border-t border-solid border-gray-600 text-gray-600 rounded-b py-1 dropdown-content"
      >
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/action/decade/decade"
            onClick={[Function]}
          >
            action
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/adventure/decade/decade"
            onClick={[Function]}
          >
            adventure
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/animation/decade/decade"
            onClick={[Function]}
          >
            animation
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/comedy/decade/decade"
            onClick={[Function]}
          >
            comedy
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/crime/decade/decade"
            onClick={[Function]}
          >
            crime
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/documentary/decade/decade"
            onClick={[Function]}
          >
            documentary
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/drama/decade/decade"
            onClick={[Function]}
          >
            drama
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/family/decade/decade"
            onClick={[Function]}
          >
            family
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/fantasy/decade/decade"
            onClick={[Function]}
          >
            fantasy
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/history/decade/decade"
            onClick={[Function]}
          >
            history
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/horror/decade/decade"
            onClick={[Function]}
          >
            horror
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/music/decade/decade"
            onClick={[Function]}
          >
            music
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/mystery/decade/decade"
            onClick={[Function]}
          >
            mystery
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/romance/decade/decade"
            onClick={[Function]}
          >
            romance
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/science-fiction/decade/decade"
            onClick={[Function]}
          >
            science fiction
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/thriller/decade/decade"
            onClick={[Function]}
          >
            thriller
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/war/decade/decade"
            onClick={[Function]}
          >
            war
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/western/decade/decade"
            onClick={[Function]}
          >
            western
          </a>
        </li>
      </ul>
    </li>
    <li
      className="dropdown-container px-4 py-1 min-w-32 border-r border-solid border-gray-600 last:border-r-0 relative hover:text-white hover:bg-gray-400 hover:rounded-t"
    >
      <p
        className="tracking-wider inline uppercase"
      >
        decade
      </p>
      <svg
        className="inline ml-2 fill-current"
      >
        arrow-down.svg
      </svg>
      <ul
        className="hidden absolute -ml-4 mt-1 px-3 w-full bg-gray-400 border-t border-solid border-gray-600 text-gray-600 rounded-b py-1 dropdown-content"
      >
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/all"
            onClick={[Function]}
          >
            all
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/2020s"
            onClick={[Function]}
          >
            2020s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/2010s"
            onClick={[Function]}
          >
            2010s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/2000s"
            onClick={[Function]}
          >
            2000s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1990s"
            onClick={[Function]}
          >
            1990s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1980s"
            onClick={[Function]}
          >
            1980s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1970s"
            onClick={[Function]}
          >
            1970s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1960s"
            onClick={[Function]}
          >
            1960s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1950s"
            onClick={[Function]}
          >
            1950s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1940s"
            onClick={[Function]}
          >
            1940s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1930s"
            onClick={[Function]}
          >
            1930s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1920s"
            onClick={[Function]}
          >
            1920s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1910s"
            onClick={[Function]}
          >
            1910s
          </a>
        </li>
        <li
          className="text-sm capitalize py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films/genre/genre/decade/1900s"
            onClick={[Function]}
          >
            1900s
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="btn btn-secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots FeatureItem Normal 1`] = `
<li>
  <div
    className="flex w-1/3 mb-3 rounded shadow p-5"
  >
    <img
      alt="eye icon"
      className="mr-5 -mt-1 w-10 h-10"
      src={
        Object {
          "ReactComponent": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
          "__esModule": true,
          "default": "eye.svg",
        }
      }
    />
    <p
      className="w-56 text-blue-100 tracking-wide text-sm"
    >
      Some text to describe one of the app features.
    </p>
  </div>
</li>
`;

exports[`Storyshots Features Normal 1`] = `
<section
  className="py-40 w-240 my-0 mx-auto"
>
  <h2
    className="text-sm uppercase tracking-more-wider mb-3"
  >
    This app lets you...
  </h2>
  <ul
    className="flex flex-wrap list-none justify-between"
  >
    <li>
      <div
        className="flex w-76 mb-4 rounded p-5 bg-gray-700"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-blue-100 tracking-wide text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded p-5 bg-gray-700"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-blue-100 tracking-wide text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded p-5 bg-gray-700"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-blue-100 tracking-wide text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded p-5 bg-gray-700"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-blue-100 tracking-wide text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded p-5 bg-gray-700"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-blue-100 tracking-wide text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded p-5 bg-gray-700"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-blue-100 tracking-wide text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
  </ul>
</section>
`;

exports[`Storyshots Form Normal 1`] = `
<form
  autoCapitalize="off"
  autoComplete="off"
  className="w-1/3 p-8 mx-auto my-0"
  onSubmit={[Function]}
>
  <div
    className="flex flex-col mb-4 text-sm"
  >
    <label
      className=""
      htmlFor="firstname"
    >
      First name
    </label>
    <input
      className="text-input"
      id="firstname"
      name="firstname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="First name"
      type="text"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4 text-sm"
  >
    <label
      className=""
      htmlFor="lastname"
    >
      Last name
    </label>
    <input
      className="text-input"
      id="lastname"
      name="lastname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Last name"
      type="text"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4 text-sm"
  >
    <label
      className=""
      htmlFor="email"
    >
      E-mail Address
    </label>
    <input
      className="text-input"
      id="email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="E-mail Address"
      type="email"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4 text-sm"
  >
    <label
      className=""
      htmlFor="password"
    >
      Password
    </label>
    <input
      className="text-input"
      id="password"
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    Try Me
  </button>
</form>
`;

exports[`Storyshots Form/FormInput Err 1`] = `
<div
  className="flex flex-col mb-4 text-sm"
>
  <label
    className="text-red-600"
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input border-red-600"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  <span
    className="text-red-600 w-64 break-words mt-1 leading-tight"
  >
    This field is required.
  </span>
</div>
`;

exports[`Storyshots Form/FormInput Password 1`] = `
<div
  className="flex flex-col mb-4 text-sm"
>
  <label
    className=""
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  
</div>
`;

exports[`Storyshots Form/FormInput Text 1`] = `
<div
  className="flex flex-col mb-4 text-sm"
>
  <label
    className=""
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  
</div>
`;

exports[`Storyshots Header Normal 1`] = `
<header
  className="h-20 bg-transparent relative z-10"
>
  <div
    className="flex w-240 my-0 mx-auto h-full items-center justify-between"
  >
    <div
      className="mr-20 px-3 py-1 text-gray-400"
    >
      LOGO
    </div>
    <nav
      className="flex w-2/3"
    >
      <ul
        className="flex items-center"
      >
        <li>
          <a
            className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
            href="/films"
            onClick={[Function]}
          >
            Films
          </a>
        </li>
        <li>
          <a
            className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
            href="/tv-shows"
            onClick={[Function]}
          >
            TV-shows
          </a>
        </li>
        <li>
          <a
            className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
            href="/people"
            onClick={[Function]}
          >
            People
          </a>
        </li>
        <li>
          <a
            className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
            href="/discussions"
            onClick={[Function]}
          >
            Discussions
          </a>
        </li>
      </ul>
      <ul
        className="flex items-center"
      >
        <button
          className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white font-rubik"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Create Account
        </button>
        <button
          className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white font-rubik"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Log In
        </button>
      </ul>
    </nav>
  </div>
</header>
`;

exports[`Storyshots Hero Normal 1`] = `
<div
  className="hero-background"
>
  <div
    className="flex w-240 my-0 mx-auto flex-col justify-end text-center pb-8"
  >
    <h1
      className="text-4xl font-serif font-bold tracking-tight leading-tight text-white"
    >
      Track stuff you've watched.
      <br />
      Save what you want to watch.
      <br />
      Share with your friends what's good.
    </h1>
    <button
      className="btn btn-primary flex justify-around w-48 mx-auto mt-10 tracking-widest font-light px-4 py-1"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Get Started
      <svg
        className="bg-white rounded-full p-1 self-center"
        title="arrow icon"
      >
        arrow.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots NavItem Normal 1`] = `
<li>
  <a
    className="px-3 py-1 text-gray-600"
    href="/default/"
    onClick={[Function]}
  >
    Default
  </a>
</li>
`;

exports[`Storyshots ResetPasswordLink Normal 1`] = `
<a
  className="text-sm -mt-4 text-gray-400 hover:text-lb-green"
  href="/reset-password"
  onClick={[Function]}
>
  Forgot my password
</a>
`;

exports[`Storyshots SearchBar Normal 1`] = `
<form
  autoCapitalize="off"
  autoComplete="off"
  className="flex text-sm uppercase"
  onSubmit={[Function]}
>
  <div
    className="flex items-center"
  >
    <label
      className=""
      htmlFor="title"
    >
      Or Search By Title
    </label>
    <input
      className="text-input-dark mt-0 ml-6 mr-3"
      id="title"
      name="title"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Title"
      type="text"
      value=""
    />
  </div>
  <button
    className="btn btn-primary py-1 px-3 text-sm font-medium"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Storyshots TopNav Logged In 1`] = `
<nav
  className="flex w-2/3"
>
  <ul
    className="flex items-center"
  >
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/films"
        onClick={[Function]}
      >
        Films
      </a>
    </li>
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/tv-shows"
        onClick={[Function]}
      >
        TV-shows
      </a>
    </li>
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/people"
        onClick={[Function]}
      >
        People
      </a>
    </li>
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/discussions"
        onClick={[Function]}
      >
        Discussions
      </a>
    </li>
  </ul>
  <ul
    className="flex items-center"
  >
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/profile"
        onClick={[Function]}
      >
        My Profile
      </a>
    </li>
    <li>
      <button
        className="btn btn-primary px-2 py-1 tracking-widest font-rubik text-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Log Out
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots TopNav Logged Out 1`] = `
<nav
  className="flex w-2/3"
>
  <ul
    className="flex items-center"
  >
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/films"
        onClick={[Function]}
      >
        Films
      </a>
    </li>
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/tv-shows"
        onClick={[Function]}
      >
        TV-shows
      </a>
    </li>
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/people"
        onClick={[Function]}
      >
        People
      </a>
    </li>
    <li>
      <a
        className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white"
        href="/discussions"
        onClick={[Function]}
      >
        Discussions
      </a>
    </li>
  </ul>
  <ul
    className="flex items-center"
  >
    <button
      className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white font-rubik"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create Account
    </button>
    <button
      className="px-2 py-1 text-gray-400 uppercase tracking-more-wider text-sm font-medium hover:text-white active:text-white font-rubik"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Log In
    </button>
  </ul>
</nav>
`;
